# AI-RAG-WeatherBot

./: LICENSE  README.md
ai-rag-weather/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ai-rag-weather/data/: README.md
ai-rag-weather/src/ai_rag_weather/: config.py  logging.py  utils.py
ai-rag-weather/src/ai_rag_weather/eval/: __init__.py  langsmith_eval.py
ai-rag-weather/src/ai_rag_weather/graph/: __init__.py  graph.py  nodes.py
ai-rag-weather/src/ai_rag_weather/ingestion/: __init__.py  pdf_ingest.py
ai-rag-weather/src/ai_rag_weather/llm/: __init__.py  prompts.py  providers.py
ai-rag-weather/src/ai_rag_weather/rag/: __init__.py  retriever.py
ai-rag-weather/src/ai_rag_weather/ui/: app.py  def build_graph():
ai-rag-weather/src/ai_rag_weather/vectordb/: __init__.py  qdrant_store.py
ai-rag-weather/src/ai_rag_weather/weather/: client.py
ai-rag-weather/tests/: test_conftest.py  test_end_to_end.py  test_graph_routing.py  test_nodes.py  test_retriever.py  test_weather_client.py
